--- a/public/css/app.css
+++ b/public/css/app.css
@@ -684,3 +684,48 @@ input .user-input #email {
   margin: 5px;
 }
 
+.start-quiz {
+  text-align: center;
+}
+
+.quiz-btn {
+  cursor: pointer;
+}
+
+.quiz_item {
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
+  list-style: none;
+  padding: 30px;
+  text-align: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  border-radius: 4px;
+  -webkit-box-shadow: 0 2px 20px rgba(0, 0, 0, 0.15);
+          box-shadow: 0 2px 20px rgba(0, 0, 0, 0.15);
+  border: 1px solid #e0e0e0;
+  max-width: 600px;
+  margin: 0 auto;
+}
+
+.quiz_item input {
+  margin: 15px 0;
+  height: 20px;
+  font-size: 20px;
+  width: 40px;
+  text-align: center;
+  border-radius: 7px;
+  border: grey 1px solid;
+}
+
+.quiz_item .btn-wrapper {
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
