--- a/public/css/app.css
+++ b/public/css/app.css
@@ -118,6 +118,27 @@ h3 {
   padding: 0;
 }
 
+.button_row {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  margin-top: 40px;
+}
+
+.styled-link {
+  color: #26ce81;
+  font-weight: 900;
+  font-size: 24px;
+  cursor: pointer;
+}
+
+.button_row a {
+  text-decoration: none;
+}
+
 .row_item {
   -webkit-box-flex: 1;
       -ms-flex: 1;
