--- a/public/css/app.css
+++ b/public/css/app.css
@@ -769,3 +769,65 @@ input .user-input #email {
   display: inline;
 }
 
+.topnav {
+  cursor: pointer;
+  z-index: 99;
+}
+
+.topnav a {
+  display: block;
+  color: #26ce81;
+  text-align: center;
+  padding: 14px 14px 14px 22px;
+  text-decoration: none;
+  font-size: 24px;
+}
+
+.topnav a:not(first-child) {
+  display: none;
+}
+
+.topnav a.icon {
+  float: right;
+  display: block;
+}
+
+#mytopnav {
+  position: absolute;
+  right: 20px;
+  border: .5px solid grey;
+  border-radius: 5px;
+}
+
+.topnav.responsive .icon {
+  top: 0;
+}
+
+.topnav.responsive a {
+  float: none;
+  display: block;
+  text-align: right;
+}
+
+.topnav.responsive {
+  background-color: #ffffff;
+}
+
+@media screen and (max-width: 767px) {
+  #mytopnav {
+    right: 10px;
+  }
+
+  .topnav a {
+    font-size: 16px;
+  }
+
+  .topnav a:first-child {
+    padding: 7px 7px 7px 15px;
+  }
+
+  .topnav a:not(first-child) {
+    padding: 10px;
+  }
+}
+
