--- a/public/css/app.css
+++ b/public/css/app.css
@@ -795,7 +795,7 @@ input .user-input #email {
 #mytopnav {
   position: absolute;
   right: 20px;
-  border: .5px solid grey;
+  border: .5px solid lightgray;
   border-radius: 5px;
 }
 
@@ -811,6 +811,11 @@ input .user-input #email {
 
 .topnav.responsive {
   background-color: #ffffff;
+}
+
+#join-burger {
+  background-color: #26ce81;
+  color: #ffffff;
 }
 
 @media screen and (max-width: 767px) {
