--- a/public/css/critical.css
+++ b/public/css/critical.css
@@ -1,6 +1,24 @@
 @import url(https://fonts.googleapis.com/css?family=Noto+Sans);body {
   font-family: 'Noto Sans', sans-serif;
   margin: 0;
+  height: 100%;
+}
+
+.page {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  min-height: 100vh;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.content {
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
 }
 
 nav {
@@ -43,10 +61,6 @@ nav ul li a {
     font-size: 20px;
   }
 
-  .nav-right ul li {
-    padding-left: 20px !important;
-  }
-
   nav {
     height: 58px !important;
   }
@@ -58,14 +72,6 @@ nav ul li a {
 
 .nav-left ul li {
   text-align: left;
-}
-
-.nav-right {
-  text-align: right;
-}
-
-.nav-right ul li {
-  display: inline-block;
 }
 
 .container {
@@ -119,5 +125,72 @@ nav ul li a {
   text-align: left;
   font-size: 18px;
   line-height: 1.75;
+}
+
+.topnav {
+  cursor: pointer;
+  z-index: 99;
+}
+
+.topnav a {
+  display: block;
+  color: #26ce81;
+  text-align: center;
+  padding: 14px 14px 14px 22px;
+  text-decoration: none;
+  font-size: 24px;
+}
+
+.topnav a:not(first-child) {
+  display: none;
+}
+
+.topnav a.icon {
+  float: right;
+  display: block;
+}
+
+#navId {
+  position: absolute;
+  right: 20px;
+  border: .5px solid lightgray;
+  border-radius: 5px;
+}
+
+.topnav.responsive .icon {
+  top: 0;
+}
+
+.topnav.responsive a {
+  float: none;
+  display: block;
+  text-align: right;
+}
+
+.topnav.responsive {
+  background-color: #ffffff;
+}
+
+#join-burger {
+  background-color: #26ce81;
+  color: #ffffff;
+}
+
+@media screen and (max-width: 767px) {
+  #mytopnav {
+    right: 10px;
+  }
+
+  .topnav a {
+    font-size: 16px;
+  }
+
+  .topnav a:first-child {
+    padding: 7px 7px 7px 15px;
+  }
+
+  .topnav a:not(first-child) {
+    padding: 10px;
+  }
 }
 
