--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -675,6 +675,7 @@ input .user-input #email {
 
 .quiz_item input {
   margin: 15px 0;
+  padding: 15px 0;
   height: 20px;
   font-size: 20px;
   width: 40px;
@@ -686,6 +687,17 @@ input .user-input #email {
 .quiz_item .btn-wrapper {
   justify-content: space-around;
   display: flex;
+}
+
+.input_prompt {
+  margin: 10px;
+  font-size: 20px;
+}
+
+.quiz-container {
+  max-width: 1220px;
+  margin: 0 auto;
+  padding: 10px;
 }
 
 /// Sharing
@@ -704,64 +716,7 @@ input .user-input #email {
 }
 
 
-// hamburger
-.topnav {
-  cursor: pointer;
-  z-index: 99;
-}
+// footer
+.sticky_footer_wrapper {
 
-.topnav a {
-  display: block;
-  color: #26ce81;
-  text-align: center;
-  padding: 14px 14px 14px 22px;
-  text-decoration: none;
-  font-size: 24px;
-}
-
-.topnav a:not(first-child) {display: none;}
-.topnav a.icon {
-  float: right;
-  display: block;
-}
-
-#navId {
-  position: absolute;
-  right: 20px;
-  border: .5px solid lightgray;
-  border-radius: 5px;
-}
-
-.topnav.responsive .icon {
-  top: 0;
-}
-.topnav.responsive a {
-  float: none;
-  display: block;
-  text-align: right;
-}
-
-.topnav.responsive {
-  background-color: #ffffff;
-}
-
-#join-burger {
-  background-color: #26ce81;
-  color: #ffffff;
-}
-
-@media screen and (max-width: 767px) {
-  #mytopnav {
-    right: 10px;
-  }
-
-  .topnav a {
-    font-size: 16px;
-  }
-
-  .topnav a:first-child {
-    padding: 7px 7px 7px 15px;
-  }
-
-  .topnav a:not(first-child) {padding: 10px;}
 }
