--- a/resources/assets/sass/critical.scss
+++ b/resources/assets/sass/critical.scss
@@ -81,6 +81,7 @@ nav ul li a {
 
 .title {
   max-width: 700px;
+  font-size: 40px;
   text-align: center;
   display: inline-block;
 }
@@ -157,9 +158,9 @@ nav ul li a {
   background-color: #ffffff;
 }
 
-#join-burger {
+.join-burger {
   background-color: #26ce81;
-  color: #ffffff;
+  color: #ffffff !important;
 }
 
 @media screen and (max-width: 767px) {
