--- a/public/css/app.css
+++ b/public/css/app.css
@@ -760,6 +760,11 @@ input .user-input #email {
   display: flex;
 }
 
+.select-wrapper {
+  text-align: left;
+  margin-left: 4em;
+}
+
 .input_prompt {
   margin: 10px;
   font-size: 20px;
