email capture and fixed styling bug on dashboard

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -375,6 +375,17 @@ h3 {
   font-size: 16px;
 }
 
+.call_to_action_quiz .button {
+  height: 50px;
+  background-color: #26ce81;
+  color: white;
+  padding: 13px 40px;
+  margin: 15px;
+  border-radius: 4px;
+  cursor: pointer;
+  font-size: 16px;
+}
+
 .article_wrapper {
   text-align: center;
 }
