--- a/public/css/app.css
+++ b/public/css/app.css
@@ -20,6 +20,52 @@ h3 {
   margin: 10px;
 }
 
+.homepage-hero-wrapper {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  text-align: center;
+}
+
+.homepage-hero {
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
+  margin: 10px;
+  padding: 15px;
+  height: 250px;
+  font-size: 24px;
+  border: 1px solid lightgray;
+  border-radius: 5px;
+}
+
+.homepage-hero h3 {
+  color: #26ce81;
+}
+
+#homepage-2 {
+  margin-top: 200px;
+}
+
+#homepage-3 {
+  margin-top: 400px;
+}
+
+@media (max-width: 400px) {
+  .homepage-hero-wrapper {
+    display: block;
+    min-height: 0;
+  }
+
+  #homepage-2 {
+    margin-top: 0;
+  }
+
+  #homepage-3 {
+    margin-top: 0;
+  }
+}
+
 .image_icon {
   max-height: 50px;
 }
