--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -1,6 +1,8 @@
 @import url('https://fonts.googleapis.com/css?family=Noto+Sans');
 
 $vegaroo-primary-color: #26ce81;
+$vegaroo-secondary-color: #ff672f;
+
 
 body {
   font-family: 'Noto Sans', sans-serif;
@@ -33,7 +35,7 @@ h3 {
   flex: 1;
   margin: 10px;
   padding: 15px;
-  height: 250px;
+  height: 200px;
   font-size: 24px;
   border: 1px solid lightgray;
   border-radius: 5px;
@@ -52,7 +54,7 @@ h3 {
 }
 
 
-@media (max-width: 400px) {
+@media (max-width: 992px) {
   .homepage-hero-wrapper {
     display: block;
     min-height: 0;
@@ -67,6 +69,10 @@ h3 {
   }
 }
 
+.large_title {
+  font-size: 24px !important;
+}
+
 // images
 .image_icon {
   max-height: 50px;
@@ -75,6 +81,7 @@ h3 {
 .tiny_img {
   width: 100%;
   margin-bottom: 10px;
+  margin-top: 15px;
 }
 
 @media (max-width: 767px) {
@@ -334,7 +341,7 @@ h3 {
 
 @media (min-width: 992px) {
   .tiny_img {
-    height: 160px;
+    height: 200px;
   }
 }
 
