--- a/resources/assets/sass/critical.scss
+++ b/resources/assets/sass/critical.scss
@@ -183,3 +183,48 @@ nav ul li a {
 
   .topnav a:not(first-child) {padding: 10px;}
 }
+
+// HOMEPAGE
+.homepage-hero-wrapper {
+  display: flex;
+  text-align: center;
+}
+
+.homepage-hero {
+  flex: 1;
+  margin: 10px;
+  padding: 15px;
+  height: 250px;
+  font-size: 24px;
+  border: 1px solid lightgray;
+  border-radius: 5px;
+}
+
+.homepage-hero h3 {
+  color: #26ce81;
+  cursor: pointer;
+}
+
+#homepage-2 {
+  margin-top: 200px;
+}
+
+#homepage-3 {
+  margin-top: 400px;
+}
+
+
+@media (max-width: 992px) {
+  .homepage-hero-wrapper {
+    display: block;
+    min-height: 0;
+  }
+
+  #homepage-2 {
+    margin-top: 0;
+  }
+
+  #homepage-3 {
+    margin-top: 0;
+  }
+}
