--- a/public/css/app.css
+++ b/public/css/app.css
@@ -108,6 +108,17 @@ h3 {
   border-radius: 4px;
 }
 
+.read-more {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
+  font-size: 18px;
+  text-decoration: underline;
+}
+
 .bold {
   font-weight: bold;
 }
@@ -209,6 +220,7 @@ h3 {
   -webkit-box-shadow: 0 2px 20px rgba(0, 0, 0, 0.15);
           box-shadow: 0 2px 20px rgba(0, 0, 0, 0.15);
   border: 1px solid #e0e0e0;
+  background-color: white;
 }
 
 .calculator_item {
