--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,6 +1,7 @@
 @import url(https://fonts.googleapis.com/css?family=Noto+Sans);body {
   font-family: 'Noto Sans', sans-serif;
   margin: 0;
+  color: #212121;
 }
 
 svg:not(:root).svg-inline--fa {
@@ -130,6 +131,7 @@ h3 {
 
 .sources {
   text-align: left;
+  color: #4a4a4a;
 }
 
 .section-title {
@@ -145,7 +147,7 @@ h3 {
 .btn {
   padding: 10px 20px;
   background-color: #26ce81;
-  margin: 0 auto;
+  margin: 4px;
   display: inline-block;
   text-align: center;
   color: #FFF;
@@ -215,16 +217,17 @@ h3 {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  margin: 5px;
+  margin: 7px;
   border-radius: 4px;
-  -webkit-box-shadow: 0 2px 20px rgba(0, 0, 0, 0.15);
-          box-shadow: 0 2px 20px rgba(0, 0, 0, 0.15);
-  border: 1px solid #e0e0e0;
+  border: .5px solid #e0e0e0;
+  -webkit-box-shadow: 0 4px 10px rgba(0, 0, 0, 0.15);
+          box-shadow: 0 4px 10px rgba(0, 0, 0, 0.15);
   background-color: white;
 }
 
 .calculator_item {
   padding: 0;
+  border-top: 6px solid #26ce81;
 }
 
 @media (max-width: 767px) {
@@ -398,6 +401,10 @@ h3 {
   .nav-right ul {
     line-height: 36px;
     font-size: 14px;
+  }
+
+  #micro_graph {
+    display: none;
   }
 }
 
@@ -753,10 +760,6 @@ input .user-input #email {
   text-align: center;
   width: 100%;
   margin-top: 30px;
-}
-
-.tags {
-  width: 50%;
 }
 
 .tags a {
