--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -2,11 +2,14 @@
 
 $vegaroo-primary-color: #26ce81;
 $vegaroo-secondary-color: #ff672f;
-
+$almost-black: hsl(0, 0%, 13%);
+$grey-text: hsl(0, 0%, 29%);
+$grey-background: hsl(0, 0%, 97%);
 
 body {
   font-family: 'Noto Sans', sans-serif;
   margin: 0;
+  color: $almost-black;
 }
 svg:not(:root).svg-inline--fa {
   cursor: pointer;
@@ -128,6 +131,7 @@ h3 {
 
 .sources {
   text-align: left;
+  color: $grey-text;
 }
 
 
@@ -143,7 +147,7 @@ h3 {
 .btn {
   padding: 10px 20px;
   background-color: $vegaroo-primary-color;
-  margin: 0 auto;
+  margin: 4px;
   display: inline-block;
   text-align: center;
   color: #FFF;
@@ -196,15 +200,16 @@ h3 {
   text-align: center;
   display: flex;
   flex-direction: column;
-  margin: 5px;
+  margin: 7px;
   border-radius: 4px;
-  box-shadow: 0 2px 20px rgba(0,0,0,.15);
-  border: 1px solid #e0e0e0;
+  border: .5px solid #e0e0e0;
+  box-shadow: 0 4px 10px rgba(0,0,0,.15);
   background-color: white;
 }
 
 .calculator_item {
   padding: 0;
+  border-top: 6px solid $vegaroo-primary-color;
 }
 
 @media (max-width: 767px) {
@@ -345,6 +350,9 @@ h3 {
   .nav-right ul {
     line-height: 36px;
     font-size: 14px;
+  }
+  #micro_graph {
+    display: none;
   }
 }
 
@@ -676,10 +684,6 @@ input .user-input #email {
   text-align: center;
   width: 100%;
   margin-top: 30px;
-}
-
-.tags {
-  width: 50%;
 }
 
 .tags a{
