--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -209,6 +209,9 @@ h3 {
 
 .calculator_item {
   padding: 0;
+}
+
+#calculator{
   border-top: 6px solid $vegaroo-primary-color;
 }
 
@@ -591,7 +594,7 @@ input .user-input #email {
 }
 
 .food-card {
-  padding: 30px;
+  padding: 20px;
   text-align: center;
   margin: 5px;
   border-radius: 4px;
