--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -287,6 +287,11 @@ h3 {
   padding: 30px;
 }
 
+.features-text {
+  font-size: 24px;
+  max-width: 500px;
+}
+
 .single-benefit {
   text-align: center;
 }
