--- a/public/css/critical.css
+++ b/public/css/critical.css
@@ -71,6 +71,10 @@ nav ul li a {
     font-size: 40px !important;
   }
 
+  .landing-page-h2 {
+    font-size: 32px !important;
+  }
+
   nav {
     height: 58px !important;
   }
@@ -85,6 +89,14 @@ nav ul li a {
 
   .hero {
     min-width: 450px;
+  }
+
+  .homepage_container_grey {
+    padding: 20px;
+  }
+
+  .homepage_container_white {
+    padding: 20px;
   }
 }
 
@@ -116,8 +128,8 @@ nav ul li a {
   #desktop-pic {
     height: auto;
     width: auto;
-    max-width: 800px;
-    max-height: 800px;
+    max-width: 650px;
+    max-height: 650px;
   }
 
   .wrapper {
@@ -306,6 +318,10 @@ nav ul li a {
     height: auto;
     width: 100%;
   }
+
+  .features-text {
+    font-size: 18px !important;
+  }
 }
 
 @media (min-width: 768px) {
@@ -338,7 +354,7 @@ nav ul li a {
 }
 
 .col {
-  background-color: white;
+  background-color: #26ce81;
   margin: 7px;
   border-radius: 4px;
   border: .5px solid #e0e0e0;
@@ -350,7 +366,7 @@ nav ul li a {
 
 .homepage_goals p {
   font-size: 20px;
-  color: #26ce81;
+  color: white;
   font-weight: bold;
 }
 
