--- a/resources/assets/sass/critical.scss
+++ b/resources/assets/sass/critical.scss
@@ -71,6 +71,10 @@ nav ul li a {
     font-size: 40px !important;
   }
 
+  .landing-page-h2 {
+    font-size: 32px !important;
+  }
+
   nav {
     height: 58px !important;
   }
@@ -85,6 +89,12 @@ nav ul li a {
 
   .hero {
     min-width: 450px;
+  }
+  .homepage_container_grey {
+    padding: 20px;
+  }
+  .homepage_container_white {
+    padding: 20px;
   }
 }
 
@@ -106,8 +116,8 @@ nav ul li a {
   #desktop-pic {
     height: auto;
     width: auto;
-    max-width: 800px;
-    max-height: 800px;
+    max-width: 650px;
+    max-height: 650px;
   }
 
   .wrapper {
@@ -283,6 +293,10 @@ nav ul li a {
     height: auto;
     width: 100%;
   }
+
+  .features-text {
+    font-size: 18px !important;
+  }
 }
 
 @media (min-width: 768px) {
@@ -307,7 +321,7 @@ nav ul li a {
 }
 
 .col {
-  background-color: white;
+  background-color: $vegaroo-primary-color;
   margin: 7px;
   border-radius: 4px;
   border: .5px solid #e0e0e0;
@@ -319,7 +333,7 @@ nav ul li a {
 .homepage_goals {
   p {
     font-size: 20px;
-    color: $vegaroo-primary-color;
+    color: white;
     font-weight: bold;
   }
 }
