--- a/public/css/critical.css
+++ b/public/css/critical.css
@@ -324,6 +324,12 @@ nav ul li a {
   }
 }
 
+@media (min-width: 1200px) {
+  #phone-pic {
+    padding-right: 100px;
+  }
+}
+
 @media (min-width: 768px) {
   .custom-flex-grid {
     display: -webkit-box;
@@ -342,7 +348,7 @@ nav ul li a {
 
   .custom-flex-grid .col {
     width: 24%;
-    margin-bottom: 20px;
+    margin: 20px 0 20px 0;
   }
 
   #phone-pic {
@@ -365,7 +371,7 @@ nav ul li a {
 }
 
 .homepage_goals p {
-  font-size: 20px;
+  font-size: 24px;
   color: white;
   font-weight: bold;
 }
