--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -282,7 +282,7 @@ h3 {
 
 .features-wrapper {
   display: flex;
-  justify-content: space-around;
+  justify-content: space-between;
   align-items: center;
   padding: 30px;
 }
